upsert, get and getall functionality.
